--- a/Supermarkt/templates/supermarkt/start.html
+++ b/Supermarkt/templates/supermarkt/start.html
@@ -19,7 +19,7 @@ div.weiterrunter {
 
 <style>
 body {
-	background-color: black;
+	background-color: white;
 }
 </style>
 
@@ -33,11 +33,11 @@ hr {
 }
 
 p {
-	color:white
+	color: black
 }
 
 h1 {
-	color:white
+	color: black
 }
 </style>
 
@@ -45,11 +45,37 @@ h1 {
 </head>
 
 <body>
+	<nav class="navbar navbar-expand-lg navbar-light bg-light">
+		<a class="navbar-brand" href="#">Navbar</a>
+		<button class="navbar-toggler" type="button" data-toggle="collapse"
+			data-target="#navbarSupportedContent"
+			aria-controls="navbarSupportedContent" aria-expanded="false"
+			aria-label="Toggle navigation">
+			<span class="navbar-toggler-icon"></span>
+		</button>
+
+		<div class="collapse navbar-collapse" id="navbarSupportedContent">
+			<ul class="navbar-nav mr-auto">
+				<li class="nav-item active"><a class="nav-link" href="http://127.0.0.1:8000/">Home
+						<span class="sr-only">(current)</span>
+				</a>
+				</li>
+				<li class="nav-item"><a class="nav-link" href="http://127.0.0.1:8000/index/">Sortiment</a></li>
+				<li class="nav-item"><a class="nav-link" href="http://127.0.0.1:8000/liefer/">Lieferant</a></li>
+				<li class="nav-item"><a class="nav-link" href="http://127.0.0.1:8000/lager/">Lager</a></li>
+			</ul>
+			<form class="form-inline my-2 my-lg-0">
+				<input class="form-control mr-sm-2" type="search"
+					placeholder="Search" aria-label="Search">
+				<button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+			</form>
+		</div>
+	</nav>
 
 	<div class="container weiterrunter">
 		<h1>{{Titel}}</h1>
 		<p class="lead">Herzlich willkommen beim JPPA Supermarkt</p>
-		<li><a href=index> Sortiment</a></li>
+		<li><a href=index>Sortiment</a></li>
 		<hr>
 		<li><a href=liefer>Lieferant</a></li>
 		<hr>
