--- a/Supermarkt/templates/supermarkt/liefer.html
+++ b/Supermarkt/templates/supermarkt/liefer.html
@@ -17,7 +17,7 @@ div.weiterrunter {
 hr {
 	width: 100%;
 	height: 5px;
-	margin: 0 auto;
+	margin: auto 10;
 	color: blue;
 	background: blue;
 }
@@ -30,7 +30,7 @@ body {
 }
 
 table {
-	margin-top: 20px;
+	margin: 100px;
 }
 </style>
 </head>
@@ -66,23 +66,28 @@ table {
 	<div class="container weiterrunter">
 		<h1>{{Titel}}</h1>
 		<hr>
-		{% if lieferant %}
-		<table class="table table-striped table table-bordered">
-			<thead class="thead-dark">
+
+		<table id="table_id" class="display">
+			<thead>
 				<tr>
-					<th>Name</th>
-					<th>LiefernatenNr</th>
+					<th scope="col">Name</th>
+					<th scope="col">LieferantenNr.</th>
 				</tr>
 			</thead>
 			<tbody>
 				{% for l in lieferant %}
 				<tr>
-					<td>{{ l.Name }}</td>
-					<td>{{ l.LiefernatenNr }}</td>
+					<td>{{ l.Name}}</td>
+					<td>{{ l.LiefernatenNr}}</td>
 				</tr>
-				{% endfor %} {% endif %}
-			<tbody>
+				{% endfor %}
+			</tbody>
 		</table>
+
+		<a href="http://127.0.0.1:8000/admin/Supermarkt/lieferant/add/"
+			class="btn btn-outline-primary btn-lg" role="button">Lieferant hinzufügen</a> <a
+			href="http://127.0.0.1:8000/admin/Supermarkt/lieferant/"
+			class="btn btn-outline-dark btn-lg" role="button">Lieferant entfernen</a>
 
 	</div>
 	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
@@ -96,5 +101,20 @@ table {
 		src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
 		integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
 		crossorigin="anonymous"></script>
+
+	{% block js %}
+	<script
+		src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+	<link rel="stylesheet" type="text/css"
+		href="https://cdn.datatables.net/v/dt/dt-1.10.18/datatables.min.css" />
+
+	<script type="text/javascript"
+		src="https://cdn.datatables.net/v/dt/dt-1.10.18/datatables.min.js"></script>
+	<script>
+	$(document).ready( function() {
+	$('#table_id').DataTable();} );
+	</script>
+
+	{% endblock js %}
 </body>
 </html>
