--- a/Supermarkt/templates/supermarkt/index.html
+++ b/Supermarkt/templates/supermarkt/index.html
@@ -16,7 +16,7 @@ div.weiterrunter {
 
 hr {
 	width: 100%;
-	height: 5px;
+	height: 2px;
 	margin: auto 10;
 	color: blue;
 	background: blue;
@@ -31,12 +31,13 @@ body {
 
 table {
 	margin: 100px;
+	color: Black;
 }
 </style>
 </head>
 <body>
-	<nav class="navbar navbar-expand-lg navbar-light bg-light">
-		<a class="navbar-brand" href="#">Navbar</a>
+	<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+		<a class="navbar-brand" href="http://127.0.0.1:8000/">Home</a>
 		<button class="navbar-toggler" type="button" data-toggle="collapse"
 			data-target="#navbarSupportedContent"
 			aria-controls="navbarSupportedContent" aria-expanded="false"
@@ -46,9 +47,7 @@ table {
 
 		<div class="collapse navbar-collapse" id="navbarSupportedContent">
 			<ul class="navbar-nav mr-auto">
-				<li class="nav-item active"><a class="nav-link"
-					href="http://127.0.0.1:8000/">Home <span class="sr-only">(current)</span>
-				</a></li>
+				
 				<li class="nav-item"><a class="nav-link"
 					href="http://127.0.0.1:8000/index/">Sortiment</a></li>
 				<li class="nav-item"><a class="nav-link"
@@ -95,10 +94,10 @@ table {
 		</table>
 
 		<a href="http://127.0.0.1:8000/admin/Supermarkt/produkte/add/"
-			class="btn btn-outline-primary btn-lg" role="button">Produkt hinzufügen</a> <a
-			href="http://127.0.0.1:8000/admin/Supermarkt/produkte/"
-			class="btn btn-outline-dark btn-lg" role="button">Produkt entfernen</a> <a
-			href="http://127.0.0.1:8000/admin/Supermarkt/produkte/"
+			class="btn btn-outline-primary btn-lg" role="button">Produkt
+			hinzufügen</a> <a href="http://127.0.0.1:8000/admin/Supermarkt/produkte/"
+			class="btn btn-outline-dark btn-lg" role="button">Produkt
+			entfernen</a> <a href="http://127.0.0.1:8000/admin/Supermarkt/produkte/"
 			class="btn btn-outline-success btn-lg" role="button">Preis ändern</a>
 
 	</div>
@@ -117,11 +116,13 @@ table {
 	{% block js %}
 	<script
 		src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+
 	<link rel="stylesheet" type="text/css"
-		href="https://cdn.datatables.net/v/dt/dt-1.10.18/datatables.min.css" />
+		href="https://cdn.datatables.net/v/dt/dt-1.10.18/af-2.3.2/b-1.5.4/sc-1.5.0/sl-1.2.6/datatables.min.css" />
 
 	<script type="text/javascript"
-		src="https://cdn.datatables.net/v/dt/dt-1.10.18/datatables.min.js"></script>
+		src="https://cdn.datatables.net/v/dt/dt-1.10.18/af-2.3.2/b-1.5.4/sc-1.5.0/sl-1.2.6/datatables.min.js"></script>
+
 	<script>
 	$(document).ready( function() {
 	$('#table_id').DataTable();} );
