--- a/Supermarkt/templates/supermarkt/regal.html
+++ b/Supermarkt/templates/supermarkt/regal.html
@@ -16,7 +16,7 @@ div.weiterrunter {
 
 hr {
 	width: 100%;
-	height: 5px;
+	height: 2px;
 	margin: auto 10;
 	color: blue;
 	background: blue;
@@ -35,8 +35,8 @@ table {
 </style>
 </head>
 <body>
-	<nav class="navbar navbar-expand-lg navbar-light bg-light">
-		<a class="navbar-brand" href="#">Navbar</a>
+	<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+		<a class="navbar-brand" href="http://127.0.0.1:8000/">Home</a>
 		<button class="navbar-toggler" type="button" data-toggle="collapse"
 			data-target="#navbarSupportedContent"
 			aria-controls="navbarSupportedContent" aria-expanded="false"
@@ -46,9 +46,6 @@ table {
 
 		<div class="collapse navbar-collapse" id="navbarSupportedContent">
 			<ul class="navbar-nav mr-auto">
-				<li class="nav-item active"><a class="nav-link"
-					href="http://127.0.0.1:8000/">Home <span class="sr-only">(current)</span>
-				</a></li>
 				<li class="nav-item"><a class="nav-link"
 					href="http://127.0.0.1:8000/index/">Sortiment</a></li>
 				<li class="nav-item"><a class="nav-link"
