--- a/Supermarkt/templates/supermarkt/start.html
+++ b/Supermarkt/templates/supermarkt/start.html
@@ -45,8 +45,8 @@ h1 {
 </head>
 
 <body>
-	<nav class="navbar navbar-expand-lg navbar-light bg-light">
-		<a class="navbar-brand" href="#">Navbar</a>
+	<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+		<a class="navbar-brand" href="http://127.0.0.1:8000/">Home</a>
 		<button class="navbar-toggler" type="button" data-toggle="collapse"
 			data-target="#navbarSupportedContent"
 			aria-controls="navbarSupportedContent" aria-expanded="false"
@@ -56,10 +56,6 @@ h1 {
 
 		<div class="collapse navbar-collapse" id="navbarSupportedContent">
 			<ul class="navbar-nav mr-auto">
-				<li class="nav-item active"><a class="nav-link" href="http://127.0.0.1:8000/">Home
-						<span class="sr-only">(current)</span>
-				</a>
-				</li>
 				<li class="nav-item"><a class="nav-link" href="http://127.0.0.1:8000/index/">Sortiment</a></li>
 				<li class="nav-item"><a class="nav-link" href="http://127.0.0.1:8000/liefer/">Lieferant</a></li>
 				<li class="nav-item"><a class="nav-link" href="http://127.0.0.1:8000/lager/">Lager</a></li>
